--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GADS Leaderboard</string>
+    <string name="skill_leaders">Skill Leaders</string>
+    <string name="learning_leaders">Learning Leaders</string>
+    <string name="leaderboard">LEADERBOARD</string>
 </resources>
